GET:api/topics tested and complete

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "mocha spec/app.spec.js",
     "make-migration": "knex migrate:make",
     "db-rollback": "knex migrate:rollback",
-    "db-latest": "knex migrate:latest"
+    "db-latest": "knex migrate:latest",
+    "server": "knex seed:run && nodemon app/listen.js"
   },
   "repository": {
     "type": "git",
@@ -24,11 +25,14 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "knex": "^0.19.5",
     "pg": "^7.12.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.1"
+    "mocha": "^6.2.1",
+    "nodemon": "^1.19.3",
+    "supertest": "^4.0.2"
   }
 }
