--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "knex seed:run",
     "test-utils": "mocha spec/utils.spec.js",
+    "test-app-utils": "mocha spec/app-utils.spec.js",
     "test": "mocha spec/app.spec.js",
     "make-migration": "knex migrate:make",
     "db-rollback": "knex migrate:rollback",
